- rotate some of the tool icons to reduce height of toolbox?

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
4/14/08 - increase precision of temperature textfield
4/14/08 - remove obsolete Climate.setMaxSnowfall, make getMaxSnowfall private
4/14/08 - rename EquilibriumLineAltitude to ELA throughout Climate model
4/14/08 - fix for negative values in Glaciers.getMaxThickness
4/14/08 - fix resetAll in Basic module
4/14/08 - fix control panel setters, no op if value is not different
4/14/08 - reorganize the ice thickness model, improve efficiency and readability
4/14/08 - show ice velocity vectors in zoomed view only, they clutter the birds-eye view
4/11/08 - fix Climate.getAblation, always add offset so that ablation is never zero 
4/11/08 - add flag for showing negative ablation in Glacial Budget chart
4/11/08 - change colors in Glacial Budget chart to match Archie's plots
4/11/08 - increase precision of snowfall textfield
4/11/08 - implement fix for negative glacier length in ice thickness model
4/9/08 - rename Glaciers.getX0 to Glaciers.getMinX, add Glaciers.getMaxX
4/9/08 - move 0-80km range details into Glacier class
4/9/08 - prevent *center* of zoomed viewport from being dragged any farther right than 80km
4/9/08 - prevent zoomed viewport from being dragged any farther right than 80km
3/25/08 - yet-another mountains image that doesn't line up (Archie is building scaling into the image!)
3/25/08 - new mountains image with alignment point, realign (valley floor contour is not correct)
3/25/08 - add alignment point for debugging alignment of mountains image
3/24/08 - new mountains image, realign (slightly off)
3/24/08 - add MountainsAndValleyNode to encapsulate image file